--- a/auth-admin/src/main/resources/application.yml
+++ b/auth-admin/src/main/resources/application.yml
@@ -13,6 +13,14 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 
+#pagehelper
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+  returnPageInfo: check
+
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
