--- a/auth-admin/src/main/resources/application.yml
+++ b/auth-admin/src/main/resources/application.yml
@@ -23,7 +23,7 @@ pagehelper:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+#    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/cloud_auth?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: root
