--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.16.20</lombok.version>
+        <commons-lang3.version>3.7</commons-lang3.version>
+        <fastjson-version>1.2.47</fastjson-version>
     </properties>
 
     <dependencies>
@@ -50,6 +52,16 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
     </dependencies>
 
