系统服务监控

--- a/auth-backup/src/main/resources/application.yml
+++ b/auth-backup/src/main/resources/application.yml
@@ -7,6 +7,12 @@ logging:
 
 # backup datasource
 spring:
+  application:
+    name: auth-backup
+  boot:
+    admin:
+      client:
+        url: "http://localhost:8000"
   backup:
     datasource:
       host: localhost
