--- a/auth-admin/pom.xml
+++ b/auth-admin/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.1.6</version>
+        </dependency>
     </dependencies>
 
 
