--- a/auth-admin/src/main/resources/application.yml
+++ b/auth-admin/src/main/resources/application.yml
@@ -22,6 +22,12 @@ pagehelper:
   returnPageInfo: check
 
 spring:
+  application:
+    name: auth-admin
+  boot:
+    admin:
+      client:
+        url: "http://localhost:8000"
   datasource:
 #    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/cloud_auth?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
