--- a/auth-backup/src/main/resources/application.yml
+++ b/auth-backup/src/main/resources/application.yml
@@ -19,3 +19,18 @@ spring:
       userName: root
       password: root
       database: cloud-auth
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        serviceName: ${spring.application.name}    # 注册到consul的服务名称
+# 开放健康检查接口
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
